// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AbcLayer PredefinedLayer should not change without migration 1`] = `
{
  "metadata": {
    "active": true,
    "id": "test-layer-id",
    "model": "OSM",
    "name": "Test predefined layer",
    "opacity": 0.5,
    "type": "Predefined",
    "visible": true,
  },
  "type": "Predefined",
}
`;

exports[`AbcLayer PredefinedLayer should not change without migration 2`] = `
{
  "OSM": "OSM",
  "StamenTerrain": "StamenTerrain",
  "StamenToner": "StamenToner",
  "StamenTonerLite": "StamenTonerLite",
  "StamenWatercolor": "StamenWatercolor",
}
`;

exports[`AbcLayer VectorLayer should not change without migration 1`] = `
{
  "features": {
    "bbox": [
      1,
      2,
      3,
      4,
    ],
    "features": [
      {
        "bbox": [
          5,
          6,
          7,
          8,
        ],
        "geometry": {
          "coordinates": [
            9,
            10,
          ],
          "type": "Point",
        },
        "id": "feature-id",
        "properties": {
          "property1": "value1",
        },
        "type": "Feature",
      },
    ],
    "type": "FeatureCollection",
  },
  "metadata": {
    "active": true,
    "id": "test-layer-id",
    "name": "Test vector layer",
    "opacity": 0.5,
    "type": "Vector",
    "visible": true,
  },
  "type": "Vector",
}
`;

exports[`AbcLayer WMS layer should not change without migration 1`] = `
{
  "metadata": {
    "active": true,
    "auth": {
      "password": "test-password",
      "username": "test-username",
    },
    "extent": [
      1,
      1,
      1,
      1,
    ],
    "id": "test-layer-id",
    "name": "Test wms layer",
    "opacity": 0.5,
    "projection": {
      "name": "EPSG:4326",
    },
    "remoteLayerName": "test-remoteLayerName",
    "remoteUrls": [
      "test-remoteUrls",
    ],
    "type": "Wms",
    "visible": true,
  },
  "type": "Wms",
}
`;

exports[`AbcLayer XYZ layer should not change without migration 1`] = `
{
  "metadata": {
    "active": true,
    "id": "test-layer-id",
    "name": "Test wms layer",
    "opacity": 0.5,
    "remoteUrl": "test-remoteUrl",
    "type": "Xyz",
    "visible": true,
  },
  "type": "Xyz",
}
`;
